--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                     </div>
 
                     <div class="Img">
-                        <img src="./img/Dom.png" alt="img" draggable="false">
-                        <figcaption>Dom</figcaption>
+                        <img src="./img/Heladeria.png" alt="img" draggable="false">
+                        <figcaption>Heladeria Html</figcaption>
                     </div>
 
                     <div class="Img">
-                        <img src="./img/pizza.png" alt="img" draggable="false">
-                        <figcaption>Food Html</figcaption>
+                        <img src="./img/Dom.png" alt="img" draggable="false">
+                        <figcaption>Dom</figcaption>
                     </div>
 
                     <div class="Img">
